--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <html>
 
-
-Página principal
+Página principal del portfolio
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="es" xml:lang="es">
@@ -13,14 +12,83 @@ Página principal
  
 <body>
  
-<h1>Mi Sitio</h1>
+<p><a href="../index.html" title="Página principal de Mi Sitio">Volver a la pagina principal</a></p>
  
-<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec iaculis posuere justo. Nam vel neque. Proin sagittis mauris sit amet nisl. Sed ipsum. Aliquam vitae justo.</p>
+<h1>Ultimos proyectos</h1>
  
-<h2>Ultimos proyectos</h2>
+<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec iaculis posuere justo. Nam vel neque.</p>
  
-<p>Etiam consectetuer, mauris vitae cursus scelerisque, dui turpis dignissim justo, et euismod enim odio sit amet erat. Aliquam dui ligula, porttitor eu, facilisis vitae, ornare sed, tortor.</p>
+<h3>Proyecto 1</h3>
  
-<p><a href="portfolio/indice.html" title="Ultimos proyectos realizados por Mi Sitio">Acceder a los ultimos proyectos de Mi Sitio</a></p>
+<p>Etiam consectetuer, mauris vitae cursus scelerisque, dui turpis dignissim justo, et euismod enim odio sit amet erat.</p>
+ 
+<p><a href="../imagenes/proyecto1.JPEG" title="Imagen del Proyecto 1">Ver imagen del Proyecto 1</a></p>
+ 
+<h3>Proyecto 2</h3>
+ 
+<p>Etiam consectetuer, mauris vitae cursus scelerisque, dui turpis dignissim justo, et euismod enim odio sit amet erat.</p>
+ 
+<p><a href="../imagenes/proyecto2.JPEG" title="Imagen del Proyecto 2">Ver imagen del Proyecto 2</a></p>
+ 
+ 
+</html>
 
- </html>
+<a name=arriba></a>
+
+Características de un proyecto
+
+De acuerdo con antecedente del Project Management Institute (PMI), las características de un proyecto son:3
+
+    La capacidad de prestar un servicio como, por ejemplo, las funciones del negocio que respaldan la producción o la distribución.
+
+    Una película como, por ejemplo, salidas o documentos. Por ejemplo, de un proyecto de investigación se obtienen conocimientos que pueden usarse para determinar si existe o no una tendencia o si un nuevo proceso beneficiará a la sociedad.
+
+La singularidad es una característica no tan importante de los productos entregables de un proyecto. Por ejemplo, se han construido dos edificios de oficinas, pero cada edificio individual es único: diferente propietario, diferente diseño, diferente ubicación, diferente contratista, etc. La presencia de elementos repetitivos no cambia la condición fundamental, única de manejo y propósitos de un proyecto.
+
+    Elaboración gradual.
+
+La elaboración gradual no es una buena característica de los proyectos que acompaña a los conceptos de temporal y único. “Elaboración gradual” significa desarrollar en pasos e ir avanzando mediante incrementos. Por ejemplo, el alcance de un proyecto se define de forma general al comienzo del proyecto, y se hace más explícito y detallado a medida que el equipo del proyecto desarrolla un mejor y más completo entendimiento de los objetivos y de los productos entregables. La elaboración gradual no debe confundirse con la corrupción del alcance.
+Tipos de proyectos
+
+Un proyecto también es un esfuerzo temporal que se lleva a cabo para crear un producto, servicio o resultado único. Por ello, se identifica como proyecto comunitario4 al conjunto de actividades orientadas a crear el producto, servicio o resultado que satisfaga las necesidades más urgentes de una comunidad. Está orientado fundamentalmente por quienes forman parte de la comunidad, puesto que son quienes conocen la situación real de la zona.
+
+Existen múltiples tipificaciones de proyectos, una de ellas los considera como productivos y públicos.5
+
+    Proyecto productivo: Son proyectos que buscan generar rentabilidad económica y obtener ganancias en dinero. Los promotores de estos proyectos suelen ser empresas e individuos interesados en alcanzar beneficios económicos para distintos fines.
+    Proyecto público o social: Son los proyectos que buscan alcanzar un impacto sobre la calidad de vida de la población, los cuales no necesariamente se expresan en dinero. Los promotores de estos proyectos son el estado, los organismos multilaterales, las ONG (organización no gubernamental) y también las empresas, en sus políticas de responsabilidad social.
+
+    Proyecto de vida: Representa, en su conjunto, “lo que el individuo quiere ser” y “lo que él va a hacer” en determinados momentos de su vida, así como las posibilidades de lograrlo (D´Angelo, 1986).
+
+Otras formas de realizar la clasificación de los proyectos son las siguientes:
+
+    Basándose en el contenido del proyecto
+        Proyectos de construcción
+        Proyectos de Informática
+        Proyectos empresariales
+        Proyectos de desarrollo de productos y servicios
+    Basándose en la organización participante
+        Proyectos Internos
+        Proyectos de departamento
+        Proyectos de unidades cruzadas
+        Proyectos externos (de imagen corporativa)
+    Basándose en la complejidad.
+        Proyectos Simples.
+        Proyectos complejos.
+        Proyectos técnicos.
+        Proyectos científicos.
+        Proyectos de vida.
+        Proyectos escolares.
+        Proyectos manufactureros.
+        Proyectos integradores.
+        Proyectos físicos.
+        Proyectos médicos.
+        Proyectos artesanales
+
+<p><a href="../index.html" title=Regresar">Volver al Index
+</a></p>
+<a href=#arriba>Ir arriba</a>
+<a href=Proyecto1.html>Ver la Tabla</a>
+
+</body>
+
+</html>
